WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229269
Touchbar not showing time scrubbing
https://bugs.webkit.org/show_bug.cgi?id=229269
Summary
Touchbar not showing time scrubbing
Jean-Yves Avenard [:jya]
Reported
2021-08-18 18:26:19 PDT
Touchbar not showing time scrubbing
Attachments
Patch
(2.71 KB, patch)
2021-08-19 06:15 PDT
,
Jean-Yves Avenard [:jya]
no flags
Details
Formatted Diff
Diff
Patch
(3.07 KB, patch)
2021-08-19 18:12 PDT
,
Jean-Yves Avenard [:jya]
no flags
Details
Formatted Diff
Diff
Patch
(2.31 KB, patch)
2021-08-20 10:12 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2021-08-18 18:27:25 PDT
rdar://81349236
Jean-Yves Avenard [:jya]
Comment 2
2021-08-19 06:15:27 PDT
Created
attachment 435859
[details]
Patch
Jer Noble
Comment 3
2021-08-19 17:26:16 PDT
Comment on
attachment 435859
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=435859&action=review
> Source/WebCore/platform/mac/WebPlaybackControlsManager.mm:93 > ++ (NSSet<NSString *> *)keyPathsForValuesAffectingCanSeek > +{ > + return [NSSet setWithObject:@"seekableTimeRanges"]; > +} > +
Nit: I would put this right above -(BOOL)canSeek, rather than next to seekableTimeRanges.
Jean-Yves Avenard [:jya]
Comment 4
2021-08-19 18:08:03 PDT
Comment on
attachment 435859
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=435859&action=review
>> Source/WebCore/platform/mac/WebPlaybackControlsManager.mm:93 >> + > > Nit: I would put this right above -(BOOL)canSeek, rather than next to seekableTimeRanges.
there's no canSeek method, it's a synthesised property. But I'll move it above.
Jean-Yves Avenard [:jya]
Comment 5
2021-08-19 18:12:45 PDT
Created
attachment 435932
[details]
Patch
EWS
Comment 6
2021-08-19 18:41:11 PDT
Committed
r281288
(
240712@main
): <
https://commits.webkit.org/240712@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435932
[details]
.
Wenson Hsieh
Comment 7
2021-08-20 09:26:32 PDT
Comment on
attachment 435932
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=435932&action=review
> Source/WebCore/platform/mac/WebPlaybackControlsManager.mm:139 > + return [NSSet setWithObjects:@"canSeek", "contentDuration", nil];
Did you mean `@"contentDuration"`?
Wenson Hsieh
Comment 8
2021-08-20 10:12:22 PDT
Reopening to attach new patch.
Wenson Hsieh
Comment 9
2021-08-20 10:12:22 PDT
Created
attachment 436005
[details]
Patch
EWS
Comment 10
2021-08-20 13:44:15 PDT
Committed
r281334
(
240751@main
): <
https://commits.webkit.org/240751@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 436005
[details]
.
Jean-Yves Avenard [:jya]
Comment 11
2021-08-20 21:38:07 PDT
Oops How did that compile locally I wonder.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug